@@ -31,6 +31,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [TRENDMICRO_VISIONONE] Delay log fetching by 5 minutes to be sure to get all logs
 - [API_PARSER] [NOZOMI] Set a custom User-Agent to prevent request blacklisting from technology
 - [HAPROXY] [LISTENERS] Put back a correct 60s server timeout for Rsyslog/Filebeat communication
+- [HAPROXY] [CONFIGURATION] Prevent configuration failures when using packaged lua scripts
 
 
 ## [2.14.2] - 2024-02-19
